--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -6,7 +6,92 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
+    name: 🇩🇪_DE_德国_1
+    type: vmess
+    server: 5.75.190.50
+    port: 3389
+    cipher: auto
+    uuid: 9c050a86-d612-48f1-ec32-e573df08a1b7
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: http
+  - &id002
+    name: 🇩🇪_DE_德国_2
+    type: vmess
+    server: 5.78.81.59
+    port: 3389
+    cipher: auto
+    uuid: 9c050a86-d612-48f1-ec32-e573df08a1b7
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: http
+  - &id003
+    name: 🇩🇪_DE_德国_3
+    type: vmess
+    server: 5.78.113.48
+    port: 3389
+    cipher: auto
+    uuid: 9c050a86-d612-48f1-ec32-e573df08a1b7
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: http
+  - &id004
+    name: 🇩🇪_DE_德国_4
+    type: vmess
+    server: 5.78.72.21
+    port: 3389
+    cipher: auto
+    uuid: 9c050a86-d612-48f1-ec32-e573df08a1b7
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: http
+  - &id005
+    name: 🇩🇪_DE_德国_5
+    type: vmess
+    server: 5.78.75.87
+    port: 3389
+    cipher: auto
+    uuid: 9c050a86-d612-48f1-ec32-e573df08a1b7
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: http
+  - &id006
     name: 🇺🇸_US_美国_1
+    type: vmess
+    server: for-irancell.outline-vpn.cloud
+    port: 80
+    cipher: auto
+    uuid: 7022982f-da4c-48c9-c660-b2315abdcf7e
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: my1.tooters.ir
+  - &id007
+    name: 🇺🇸_US_美国_2
+    type: vmess
+    server: server32.beheshtbaneh.com
+    port: 8880
+    cipher: auto
+    uuid: 044ba8ed-7285-472a-bc14-fb91dc6be4c9
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: server32.beheshtbaneh.com
+  - &id008
+    name: 🇺🇸_US_美国->🇩🇪_DE_德国_1
     type: vmess
     server: 104.20.231.30
     port: 80
@@ -20,13 +105,13 @@ proxies:
       path: /
       headers:
         host: my1.tooters.ir
-  - &id002
-    name: 🇺🇸_US_美国_2
+  - &id009
+    name: 🇺🇸_US_美国_3
     type: vmess
-    server: 104.24.208.37
-    port: 80
+    server: 104.21.94.99
+    port: 8080
     cipher: auto
-    uuid: 7022982f-da4c-48c9-c660-b2315abdcf7e
+    uuid: 22826b44-5c1a-4b4b-dbaa-83a2e8bd95f0
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -34,9 +119,9 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: my1.tooters.ir
-  - &id003
-    name: 🇺🇸_US_美国_3
+        host: www.blueberrywindow.online
+  - &id010
+    name: 🇺🇸_US_美国->🇩🇪_DE_德国_2
     type: vmess
     server: 104.22.51.162
     port: 80
@@ -50,13 +135,13 @@ proxies:
       path: /
       headers:
         host: my1.tooters.ir
-  - &id004
+  - &id011
     name: 🇺🇸_US_美国_4
     type: vmess
-    server: 104.21.82.183
+    server: server33.beheshtbaneh.com
     port: 8880
     cipher: auto
-    uuid: 5a7021e0-26b4-45d6-b175-fe551601ca97
+    uuid: 0873fffc-414f-4140-a155-672129fd9a1d
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -64,11 +149,11 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: server26.beheshtbaneh.com
-  - &id005
+        host: server33.beheshtbaneh.com
+  - &id012
     name: 🇺🇸_US_美国_5
     type: vmess
-    server: www.crispyrainbow.online
+    server: 172.67.221.183
     port: 8080
     cipher: auto
     uuid: 22826b44-5c1a-4b4b-dbaa-83a2e8bd95f0
@@ -79,8 +164,8 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: www.crispyrainbow.online
-  - &id006
+        host: www.blueberrywindow.online
+  - &id013
     name: 🇺🇸_US_美国_6
     type: vmess
     server: www.blueberrywindow.online
@@ -95,13 +180,58 @@ proxies:
       path: /
       headers:
         host: www.blueberrywindow.online
-  - &id007
+  - &id014
+    name: 🇺🇸_US_美国->🇹🇷_TR_土耳其
+    type: vmess
+    server: 45.65.8.4
+    port: 443
+    cipher: auto
+    uuid: 2ff97c6d-8557-42a4-b43f-19c77c5959ea
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /@forwardv2ray
+      headers:
+        host: irsoft.sytes.net
+  - &id015
+    name: 🇺🇸_US_美国->🇩🇪_DE_德国_3
+    type: vmess
+    server: www.greendam.site
+    port: 80
+    cipher: auto
+    uuid: 7022982f-da4c-48c9-c660-b2315abdcf7e
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: my1.tooters.ir
+  - &id016
+    name: 🇳🇱_NL_荷兰
+    type: vmess
+    server: 91.242.229.77
+    port: 80
+    cipher: auto
+    uuid: 56890326-df58-432d-be1e-67064e2b4355
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /vmess
+      headers:
+        host: 91.242.229.77
+  - &id017
     name: 🇺🇸_US_美国_7
     type: vmess
-    server: 104.21.94.99
-    port: 8080
+    server: s12.956256.xyz
+    port: 80
     cipher: auto
-    uuid: 22826b44-5c1a-4b4b-dbaa-83a2e8bd95f0
+    uuid: 8ddfa270-aab5-45f0-b964-a729b957c70e
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -109,14 +239,14 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: www.blueberrywindow.online
-  - &id008
+        host: caonimashabiwanyi21.daxiongda.top
+  - &id018
     name: 🇺🇸_US_美国_8
     type: vmess
-    server: 172.67.212.114
-    port: 8080
+    server: s1.956256.xyz
+    port: 80
     cipher: auto
-    uuid: 22826b44-5c1a-4b4b-dbaa-83a2e8bd95f0
+    uuid: 8ddfa270-aab5-45f0-b964-a729b957c70e
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -124,11 +254,146 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: www.crispyrainbow.biz
-  - &id009
+        host: caonimashabiwanyi4.daxiongda.top
+  - &id019
     name: 🇺🇸_US_美国_9
     type: vmess
-    server: www.darkroom.lol
+    server: s13.956256.xyz
+    port: 80
+    cipher: auto
+    uuid: 8ddfa270-aab5-45f0-b964-a729b957c70e
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: caonimashabiwanyi20.daxiongda.top
+  - &id020
+    name: 🇺🇸_US_美国->🇧🇷_BR_巴西
+    type: vmess
+    server: s4.956256.xyz
+    port: 80
+    cipher: auto
+    uuid: 8ddfa270-aab5-45f0-b964-a729b957c70e
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: caonimashabiwanyi5.daxiongda.top
+  - &id021
+    name: 🇧🇷_BR_巴西
+    type: vmess
+    server: s3.956256.xyz
+    port: 80
+    cipher: auto
+    uuid: 8ddfa270-aab5-45f0-b964-a729b957c70e
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: caonimashabiwanyi5.daxiongda.top
+  - &id022
+    name: 🇺🇸_US_美国_10
+    type: vmess
+    server: s2.956256.xyz
+    port: 80
+    cipher: auto
+    uuid: 8ddfa270-aab5-45f0-b964-a729b957c70e
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: caonimashabiwanyi5.daxiongda.top
+  - &id023
+    name: 🇮🇳_IN_印度_1
+    type: vmess
+    server: s8.956256.xyz
+    port: 80
+    cipher: auto
+    uuid: 8ddfa270-aab5-45f0-b964-a729b957c70e
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: caonimashabiwanyi21.daxiongda.top
+  - &id024
+    name: 🇺🇸_US_美国_11
+    type: vmess
+    server: daxiongda.top
+    port: 80
+    cipher: auto
+    uuid: 8ddfa270-aab5-45f0-b964-a729b957c70e
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: caonimashabiwanyi23.daxiongda.top
+  - &id025
+    name: 🇺🇸_US_美国->🇨🇱_CL_智利
+    type: vmess
+    server: s11.956256.xyz
+    port: 80
+    cipher: auto
+    uuid: 8ddfa270-aab5-45f0-b964-a729b957c70e
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: caonimashabiwanyi21.daxiongda.top
+  - &id026
+    name: 🇮🇳_IN_印度_2
+    type: vmess
+    server: s7.956256.xyz
+    port: 80
+    cipher: auto
+    uuid: 8ddfa270-aab5-45f0-b964-a729b957c70e
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: caonimashabiwanyi21.daxiongda.top
+  - &id027
+    name: 🇺🇸_US_美国_12
+    type: vmess
+    server: s14.956256.xyz
+    port: 80
+    cipher: auto
+    uuid: 8ddfa270-aab5-45f0-b964-a729b957c70e
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: caonimashabiwanyi21.daxiongda.top
+  - &id028
+    name: 🇺🇸_US_美国_13
+    type: vmess
+    server: 104.21.31.244
     port: 8080
     cipher: auto
     uuid: 22826b44-5c1a-4b4b-dbaa-83a2e8bd95f0
@@ -139,9 +404,84 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: www.darkroom.lol
-  - &id010
-    name: 🇺🇸_US_美国_10
+        host: www.nahck.site
+  - &id029
+    name: 🇺🇸_US_美国_14
+    type: vmess
+    server: 165.1.74.141
+    port: 80
+    cipher: auto
+    uuid: 8ddfa270-aab5-45f0-b964-a729b957c70e
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: s2.956256.xyz
+  - &id030
+    name: 🇺🇸_US_美国_15
+    type: vmess
+    server: 141.148.180.132
+    port: 80
+    cipher: auto
+    uuid: 8ddfa270-aab5-45f0-b964-a729b957c70e
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: s13.956256.xyz
+  - &id031
+    name: 🇺🇸_US_美国_16
+    type: vmess
+    server: 146.235.243.222
+    port: 80
+    cipher: auto
+    uuid: 8ddfa270-aab5-45f0-b964-a729b957c70e
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: s12.956256.xyz
+  - &id032
+    name: 🇮🇳_IN_印度_3
+    type: vmess
+    server: 141.148.193.95
+    port: 80
+    cipher: auto
+    uuid: 8ddfa270-aab5-45f0-b964-a729b957c70e
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: s7.956256.xyz
+  - &id033
+    name: 🇮🇳_IN_印度_4
+    type: vmess
+    server: 141.148.202.113
+    port: 80
+    cipher: auto
+    uuid: 8ddfa270-aab5-45f0-b964-a729b957c70e
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: s8.956256.xyz
+  - &id034
+    name: 🇺🇸_US_美国_17
     type: vmess
     server: 172.67.166.190
     port: 8080
@@ -155,10 +495,10 @@ proxies:
       path: /
       headers:
         host: www.crispyrainbow.online
-  - &id011
-    name: 🇺🇸_US_美国_11
+  - &id035
+    name: 🇺🇸_US_美国_18
     type: vmess
-    server: www.crispyrainbow.biz
+    server: 104.21.23.176
     port: 8080
     cipher: auto
     uuid: 22826b44-5c1a-4b4b-dbaa-83a2e8bd95f0
@@ -170,123 +510,43 @@ proxies:
       path: /
       headers:
         host: www.crispyrainbow.biz
-  - &id012
-    name: 🇺🇸_US_美国_12
+  - &id036
+    name: 🇿🇦_ZA_南非
     type: vmess
-    server: 104.21.89.252
-    port: 8080
+    server: 129.151.164.152
+    port: 55600
     cipher: auto
-    uuid: 22826b44-5c1a-4b4b-dbaa-83a2e8bd95f0
+    uuid: e30f8588-2555-48b8-c354-c8e63f57232d
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
       path: /
-      headers:
-        host: www.crispyrainbow.online
-  - &id013
-    name: 🇨🇳_CN_中国->🇮🇳_IN_印度
+  - &id037
+    name: 🇩🇪_DE_德国_6
     type: vmess
-    server: 183.232.170.22
-    port: 30128
+    server: 116.203.116.244
+    port: 3389
     cipher: auto
-    uuid: 9f41898b-e80d-418d-9ea8-5c51a914722a
+    uuid: 9c050a86-d612-48f1-ec32-e573df08a1b7
     alterId: 0
     tls: false
+    skip-cert-verify: true
+    network: http
+  - &id038
+    name: 🇮🇪_IE_爱尔兰
+    type: trojan
+    server: 54.73.239.19
+    port: 22222
+    udp: true
+    password: telegram-id-privatevpns
+    sni: trojan.miwan.co.uk
     skip-cert-verify: true
     network: tcp
-  - &id014
-    name: 🇺🇸_US_美国_13
-    type: vmess
-    server: server33.beheshtbaneh.com
-    port: 8880
-    cipher: auto
-    uuid: 0873fffc-414f-4140-a155-672129fd9a1d
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: server33.beheshtbaneh.com
-  - &id015
-    name: 🇺🇸_US_美国_14
-    type: vmess
-    server: server32.beheshtbaneh.com
-    port: 8880
-    cipher: auto
-    uuid: 044ba8ed-7285-472a-bc14-fb91dc6be4c9
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: server32.beheshtbaneh.com
-  - &id016
-    name: 🇺🇸_US_美国_15
-    type: vmess
-    server: 172.67.221.183
-    port: 8080
-    cipher: auto
-    uuid: 22826b44-5c1a-4b4b-dbaa-83a2e8bd95f0
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: www.blueberrywindow.online
-  - &id017
-    name: 🇺🇸_US_美国_16
-    type: vmess
-    server: server31.beheshtbaneh.com
-    port: 8880
-    cipher: auto
-    uuid: 4154143c-bbba-47a4-9f79-c2ed087cbcc9
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: server31.beheshtbaneh.com
-  - &id018
-    name: 🇺🇸_US_美国_17
-    type: vmess
-    server: server20.beheshtbaneh.com
-    port: 8880
-    cipher: auto
-    uuid: 7ee41eb4-0594-4e2d-92a7-5dd3ee513692
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: server20.beheshtbaneh.com
-  - &id019
-    name: 🇺🇸_US_美国_18
-    type: vmess
-    server: server26.beheshtbaneh.com
-    port: 8880
-    cipher: auto
-    uuid: 5a7021e0-26b4-45d6-b175-fe551601ca97
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: server26.beheshtbaneh.com
-  - &id020
+    alpn:
+      - http/1.1
+  - &id039
     name: 🇷🇺_RU_俄罗斯联邦
     type: vmess
     server: 45.144.2.113
@@ -301,20 +561,35 @@ proxies:
       path: /
       headers:
         host: 45.144.2.113
-  - &id021
-    name: 🇨🇳_CN_中国->🇨🇿_CZ_捷克
+  - &id040
+    name: 🇨🇦_CA_加拿大
     type: trojan
-    server: xibaozi.19890604.day
-    port: 10846
+    server: 15.157.40.4
+    port: 22222
     udp: true
-    password: 4623e7ff-47b4-41d6-8f5a-33c8e6ac3fd5
-    sni: cloudflare.node-ssl.cdn-alibaba.com
+    password: telegram-id-directvpn
+    sni: trojan.miwan.co.uk
     skip-cert-verify: true
     network: tcp
-  - &id022
-    name: 🇬🇧_GB_英国
+  - &id041
+    name: 🇺🇸_US_美国_19
+    type: vmess
+    server: 165.1.66.37
+    port: 80
+    cipher: auto
+    uuid: 8ddfa270-aab5-45f0-b964-a729b957c70e
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: s1.956256.xyz
+  - &id042
+    name: 🇫🇷_FR_法国
     type: trojan
-    server: 18.169.140.197
+    server: 15.188.111.158
     port: 22222
     udp: true
     password: telegram-id-privatevpns
@@ -369,6 +644,26 @@ proxy-groups:
       - *id020
       - *id021
       - *id022
+      - *id023
+      - *id024
+      - *id025
+      - *id026
+      - *id027
+      - *id028
+      - *id029
+      - *id030
+      - *id031
+      - *id032
+      - *id033
+      - *id034
+      - *id035
+      - *id036
+      - *id037
+      - *id038
+      - *id039
+      - *id040
+      - *id041
+      - *id042
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -396,6 +691,26 @@ proxy-groups:
       - *id020
       - *id021
       - *id022
+      - *id023
+      - *id024
+      - *id025
+      - *id026
+      - *id027
+      - *id028
+      - *id029
+      - *id030
+      - *id031
+      - *id032
+      - *id033
+      - *id034
+      - *id035
+      - *id036
+      - *id037
+      - *id038
+      - *id039
+      - *id040
+      - *id041
+      - *id042
   - name: SELECT
     type: select
     proxies:
@@ -421,6 +736,26 @@ proxy-groups:
       - *id020
       - *id021
       - *id022
+      - *id023
+      - *id024
+      - *id025
+      - *id026
+      - *id027
+      - *id028
+      - *id029
+      - *id030
+      - *id031
+      - *id032
+      - *id033
+      - *id034
+      - *id035
+      - *id036
+      - *id037
+      - *id038
+      - *id039
+      - *id040
+      - *id041
+      - *id042
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
