--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -6,109 +6,35 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
-    name: 🇩🇪_DE_德国_1
-    type: vmess
-    server: 5.75.190.50
-    port: 3389
-    cipher: auto
-    uuid: 9c050a86-d612-48f1-ec32-e573df08a1b7
-    alterId: 0
-    tls: false
+    name: 🇺🇸_US_美国->🇷🇺_RU_俄罗斯联邦
+    type: trojan
+    server: 172.67.204.84
+    port: 443
+    udp: true
+    password: qj1Dz1CJmFQRhWr1SP80aA
+    sni: cdn-21.gsmxreality.com
     skip-cert-verify: true
-    network: http
+    network: grpc
+    grpc-opts:
+      grpc-service-name: 443trojan
   - &id002
-    name: 🇩🇪_DE_德国_2
-    type: vmess
-    server: 5.78.81.59
-    port: 3389
-    cipher: auto
-    uuid: 9c050a86-d612-48f1-ec32-e573df08a1b7
-    alterId: 0
-    tls: false
+    name: 🇺🇸_US_美国->🇹🇷_TR_土耳其_1
+    type: trojan
+    server: 172.67.175.243
+    port: 2053
+    udp: true
+    password: YS7mIZvKNt
+    sni: panell.followprovider.ir
     skip-cert-verify: true
-    network: http
+    network: grpc
+    grpc-opts:
+      grpc-service-name: server-53651.prod.hosts.ooklaserver.net
+    alpn:
+      - h2
   - &id003
-    name: 🇩🇪_DE_德国_3
-    type: vmess
-    server: 5.78.113.48
-    port: 3389
-    cipher: auto
-    uuid: 9c050a86-d612-48f1-ec32-e573df08a1b7
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: http
-  - &id004
-    name: 🇩🇪_DE_德国_4
-    type: vmess
-    server: 5.78.72.21
-    port: 3389
-    cipher: auto
-    uuid: 9c050a86-d612-48f1-ec32-e573df08a1b7
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: http
-  - &id005
-    name: 🇩🇪_DE_德国_5
-    type: vmess
-    server: 5.78.75.87
-    port: 3389
-    cipher: auto
-    uuid: 9c050a86-d612-48f1-ec32-e573df08a1b7
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: http
-  - &id006
     name: 🇺🇸_US_美国_1
     type: vmess
-    server: for-irancell.outline-vpn.cloud
-    port: 80
-    cipher: auto
-    uuid: 7022982f-da4c-48c9-c660-b2315abdcf7e
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: my1.tooters.ir
-  - &id007
-    name: 🇺🇸_US_美国_2
-    type: vmess
-    server: server32.beheshtbaneh.com
-    port: 8880
-    cipher: auto
-    uuid: 044ba8ed-7285-472a-bc14-fb91dc6be4c9
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: server32.beheshtbaneh.com
-  - &id008
-    name: 🇺🇸_US_美国->🇩🇪_DE_德国_1
-    type: vmess
-    server: 104.20.231.30
-    port: 80
-    cipher: auto
-    uuid: 7022982f-da4c-48c9-c660-b2315abdcf7e
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: my1.tooters.ir
-  - &id009
-    name: 🇺🇸_US_美国_3
-    type: vmess
-    server: 104.21.94.99
+    server: 172.67.180.248
     port: 8080
     cipher: auto
     uuid: 22826b44-5c1a-4b4b-dbaa-83a2e8bd95f0
@@ -119,14 +45,14 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: www.blueberrywindow.online
-  - &id010
-    name: 🇺🇸_US_美国->🇩🇪_DE_德国_2
+        host: www.nahck.site
+  - &id004
+    name: 🇺🇸_US_美国_2
     type: vmess
-    server: 104.22.51.162
-    port: 80
+    server: 104.21.31.244
+    port: 8080
     cipher: auto
-    uuid: 7022982f-da4c-48c9-c660-b2315abdcf7e
+    uuid: 22826b44-5c1a-4b4b-dbaa-83a2e8bd95f0
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -134,14 +60,29 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: my1.tooters.ir
-  - &id011
+        host: www.nahck.site
+  - &id005
+    name: 🇺🇸_US_美国_3
+    type: vmess
+    server: www.nahck.site
+    port: 8080
+    cipher: auto
+    uuid: 22826b44-5c1a-4b4b-dbaa-83a2e8bd95f0
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: www.nahck.site
+  - &id006
     name: 🇺🇸_US_美国_4
     type: vmess
-    server: server33.beheshtbaneh.com
-    port: 8880
+    server: www.crispyrainbow.online
+    port: 8080
     cipher: auto
-    uuid: 0873fffc-414f-4140-a155-672129fd9a1d
+    uuid: 22826b44-5c1a-4b4b-dbaa-83a2e8bd95f0
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -149,9 +90,54 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: server33.beheshtbaneh.com
-  - &id012
+        host: www.crispyrainbow.online
+  - &id007
     name: 🇺🇸_US_美国_5
+    type: vmess
+    server: www.crispyrainbow.biz
+    port: 8080
+    cipher: auto
+    uuid: 22826b44-5c1a-4b4b-dbaa-83a2e8bd95f0
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: www.crispyrainbow.biz
+  - &id008
+    name: 🇺🇸_US_美国_6
+    type: vmess
+    server: 104.21.23.176
+    port: 8080
+    cipher: auto
+    uuid: 22826b44-5c1a-4b4b-dbaa-83a2e8bd95f0
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: www.crispyrainbow.biz
+  - &id009
+    name: 🇺🇸_US_美国_7
+    type: vmess
+    server: 172.67.166.190
+    port: 8080
+    cipher: auto
+    uuid: 22826b44-5c1a-4b4b-dbaa-83a2e8bd95f0
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: www.crispyrainbow.online
+  - &id010
+    name: 🇺🇸_US_美国_8
     type: vmess
     server: 172.67.221.183
     port: 8080
@@ -165,8 +151,37 @@ proxies:
       path: /
       headers:
         host: www.blueberrywindow.online
+  - &id011
+    name: 🇺🇸_US_美国->🇹🇷_TR_土耳其_2
+    type: trojan
+    server: 104.21.72.61
+    port: 2053
+    udp: true
+    password: YS7mIZvKNt
+    sni: panell.followprovider.ir
+    skip-cert-verify: true
+    network: grpc
+    grpc-opts:
+      grpc-service-name: server-53651.prod.hosts.ooklaserver.net
+    alpn:
+      - h2
+  - &id012
+    name: 🇺🇸_US_美国_9
+    type: vmess
+    server: 104.21.94.99
+    port: 8080
+    cipher: auto
+    uuid: 22826b44-5c1a-4b4b-dbaa-83a2e8bd95f0
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: www.blueberrywindow.online
   - &id013
-    name: 🇺🇸_US_美国_6
+    name: 🇺🇸_US_美国_10
     type: vmess
     server: www.blueberrywindow.online
     port: 8080
@@ -181,162 +196,12 @@ proxies:
       headers:
         host: www.blueberrywindow.online
   - &id014
-    name: 🇺🇸_US_美国->🇹🇷_TR_土耳其
-    type: vmess
-    server: 45.65.8.4
-    port: 443
-    cipher: auto
-    uuid: 2ff97c6d-8557-42a4-b43f-19c77c5959ea
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /@forwardv2ray
-      headers:
-        host: irsoft.sytes.net
-  - &id015
-    name: 🇺🇸_US_美国->🇩🇪_DE_德国_3
-    type: vmess
-    server: www.greendam.site
-    port: 80
-    cipher: auto
-    uuid: 7022982f-da4c-48c9-c660-b2315abdcf7e
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: my1.tooters.ir
-  - &id016
-    name: 🇳🇱_NL_荷兰
-    type: vmess
-    server: 91.242.229.77
-    port: 80
-    cipher: auto
-    uuid: 56890326-df58-432d-be1e-67064e2b4355
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /vmess
-      headers:
-        host: 91.242.229.77
-  - &id017
-    name: 🇺🇸_US_美国_7
-    type: vmess
-    server: s12.956256.xyz
-    port: 80
-    cipher: auto
-    uuid: 8ddfa270-aab5-45f0-b964-a729b957c70e
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: caonimashabiwanyi21.daxiongda.top
-  - &id018
-    name: 🇺🇸_US_美国_8
-    type: vmess
-    server: s1.956256.xyz
-    port: 80
-    cipher: auto
-    uuid: 8ddfa270-aab5-45f0-b964-a729b957c70e
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: caonimashabiwanyi4.daxiongda.top
-  - &id019
-    name: 🇺🇸_US_美国_9
-    type: vmess
-    server: s13.956256.xyz
-    port: 80
-    cipher: auto
-    uuid: 8ddfa270-aab5-45f0-b964-a729b957c70e
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: caonimashabiwanyi20.daxiongda.top
-  - &id020
-    name: 🇺🇸_US_美国->🇧🇷_BR_巴西
-    type: vmess
-    server: s4.956256.xyz
-    port: 80
-    cipher: auto
-    uuid: 8ddfa270-aab5-45f0-b964-a729b957c70e
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: caonimashabiwanyi5.daxiongda.top
-  - &id021
-    name: 🇧🇷_BR_巴西
-    type: vmess
-    server: s3.956256.xyz
-    port: 80
-    cipher: auto
-    uuid: 8ddfa270-aab5-45f0-b964-a729b957c70e
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: caonimashabiwanyi5.daxiongda.top
-  - &id022
-    name: 🇺🇸_US_美国_10
-    type: vmess
-    server: s2.956256.xyz
-    port: 80
-    cipher: auto
-    uuid: 8ddfa270-aab5-45f0-b964-a729b957c70e
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: caonimashabiwanyi5.daxiongda.top
-  - &id023
-    name: 🇮🇳_IN_印度_1
-    type: vmess
-    server: s8.956256.xyz
-    port: 80
-    cipher: auto
-    uuid: 8ddfa270-aab5-45f0-b964-a729b957c70e
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: caonimashabiwanyi21.daxiongda.top
-  - &id024
     name: 🇺🇸_US_美国_11
     type: vmess
-    server: daxiongda.top
-    port: 80
+    server: 104.21.82.183
+    port: 8880
     cipher: auto
-    uuid: 8ddfa270-aab5-45f0-b964-a729b957c70e
+    uuid: 7ee41eb4-0594-4e2d-92a7-5dd3ee513692
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -344,146 +209,11 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: caonimashabiwanyi23.daxiongda.top
-  - &id025
-    name: 🇺🇸_US_美国->🇨🇱_CL_智利
-    type: vmess
-    server: s11.956256.xyz
-    port: 80
-    cipher: auto
-    uuid: 8ddfa270-aab5-45f0-b964-a729b957c70e
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: caonimashabiwanyi21.daxiongda.top
-  - &id026
-    name: 🇮🇳_IN_印度_2
-    type: vmess
-    server: s7.956256.xyz
-    port: 80
-    cipher: auto
-    uuid: 8ddfa270-aab5-45f0-b964-a729b957c70e
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: caonimashabiwanyi21.daxiongda.top
-  - &id027
+        host: server20.beheshtbaneh.com
+  - &id015
     name: 🇺🇸_US_美国_12
     type: vmess
-    server: s14.956256.xyz
-    port: 80
-    cipher: auto
-    uuid: 8ddfa270-aab5-45f0-b964-a729b957c70e
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: caonimashabiwanyi21.daxiongda.top
-  - &id028
-    name: 🇺🇸_US_美国_13
-    type: vmess
-    server: 104.21.31.244
-    port: 8080
-    cipher: auto
-    uuid: 22826b44-5c1a-4b4b-dbaa-83a2e8bd95f0
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: www.nahck.site
-  - &id029
-    name: 🇺🇸_US_美国_14
-    type: vmess
-    server: 165.1.74.141
-    port: 80
-    cipher: auto
-    uuid: 8ddfa270-aab5-45f0-b964-a729b957c70e
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: s2.956256.xyz
-  - &id030
-    name: 🇺🇸_US_美国_15
-    type: vmess
-    server: 141.148.180.132
-    port: 80
-    cipher: auto
-    uuid: 8ddfa270-aab5-45f0-b964-a729b957c70e
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: s13.956256.xyz
-  - &id031
-    name: 🇺🇸_US_美国_16
-    type: vmess
-    server: 146.235.243.222
-    port: 80
-    cipher: auto
-    uuid: 8ddfa270-aab5-45f0-b964-a729b957c70e
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: s12.956256.xyz
-  - &id032
-    name: 🇮🇳_IN_印度_3
-    type: vmess
-    server: 141.148.193.95
-    port: 80
-    cipher: auto
-    uuid: 8ddfa270-aab5-45f0-b964-a729b957c70e
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: s7.956256.xyz
-  - &id033
-    name: 🇮🇳_IN_印度_4
-    type: vmess
-    server: 141.148.202.113
-    port: 80
-    cipher: auto
-    uuid: 8ddfa270-aab5-45f0-b964-a729b957c70e
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: s8.956256.xyz
-  - &id034
-    name: 🇺🇸_US_美国_17
-    type: vmess
-    server: 172.67.166.190
+    server: 104.21.89.252
     port: 8080
     cipher: auto
     uuid: 22826b44-5c1a-4b4b-dbaa-83a2e8bd95f0
@@ -495,10 +225,10 @@ proxies:
       path: /
       headers:
         host: www.crispyrainbow.online
-  - &id035
-    name: 🇺🇸_US_美国_18
+  - &id016
+    name: 🇺🇸_US_美国_13
     type: vmess
-    server: 104.21.23.176
+    server: 172.67.212.114
     port: 8080
     cipher: auto
     uuid: 22826b44-5c1a-4b4b-dbaa-83a2e8bd95f0
@@ -510,21 +240,45 @@ proxies:
       path: /
       headers:
         host: www.crispyrainbow.biz
-  - &id036
-    name: 🇿🇦_ZA_南非
+  - &id017
+    name: 🇺🇸_US_美国_14
     type: vmess
-    server: 129.151.164.152
-    port: 55600
+    server: 104.21.61.214
+    port: 8080
     cipher: auto
-    uuid: e30f8588-2555-48b8-c354-c8e63f57232d
+    uuid: 22826b44-5c1a-4b4b-dbaa-83a2e8bd95f0
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
       path: /
-  - &id037
-    name: 🇩🇪_DE_德国_6
+      headers:
+        host: www.darkroom.lol
+  - &id018
+    name: 🇳🇱_NL_荷兰
+    type: vmess
+    server: 91.242.229.69
+    port: 2086
+    cipher: auto
+    uuid: 88c216b8-56c6-4f34-bcfd-e198ce11f7d6
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /vmess
+      headers:
+        host: nl1.xv2ray.net
+  - &id019
+    name: 🇨🇾_CY_塞浦路斯
+    type: ss
+    server: 85.239.40.69
+    port: 21205
+    password: P84jEsm2JGaOIpEv
+    cipher: aes-256-gcm
+  - &id020
+    name: 🇩🇪_DE_德国_1
     type: vmess
     server: 116.203.116.244
     port: 3389
@@ -534,25 +288,13 @@ proxies:
     tls: false
     skip-cert-verify: true
     network: http
-  - &id038
-    name: 🇮🇪_IE_爱尔兰
-    type: trojan
-    server: 54.73.239.19
-    port: 22222
-    udp: true
-    password: telegram-id-privatevpns
-    sni: trojan.miwan.co.uk
-    skip-cert-verify: true
-    network: tcp
-    alpn:
-      - http/1.1
-  - &id039
-    name: 🇷🇺_RU_俄罗斯联邦
+  - &id021
+    name: 🇺🇸_US_美国_15
     type: vmess
-    server: 45.144.2.113
+    server: 172.67.217.144
     port: 80
     cipher: auto
-    uuid: 1cb996c8-e5bf-40d2-9a3c-149b3b721c5f
+    uuid: 85674552-ce41-44d9-bb2a-50f76450b3d8
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -560,42 +302,55 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: 45.144.2.113
-  - &id040
+        host: lv1.xv2ray.net
+  - &id022
+    name: 🇩🇪_DE_德国_2
+    type: vmess
+    server: 5.75.190.50
+    port: 3389
+    cipher: auto
+    uuid: 9c050a86-d612-48f1-ec32-e573df08a1b7
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: http
+  - &id023
     name: 🇨🇦_CA_加拿大
     type: trojan
-    server: 15.157.40.4
+    server: 3.97.177.99
     port: 22222
     udp: true
     password: telegram-id-directvpn
     sni: trojan.miwan.co.uk
     skip-cert-verify: true
     network: tcp
-  - &id041
-    name: 🇺🇸_US_美国_19
+  - &id024
+    name: 🇬🇧_GB_英国
     type: vmess
-    server: 165.1.66.37
-    port: 80
+    server: au-melbourne-oracle-abfdf2.ip1.shop
+    port: 63503
     cipher: auto
-    uuid: 8ddfa270-aab5-45f0-b964-a729b957c70e
+    uuid: ed4d8827-4d5a-4c05-a577-c66d6a2fc1e6
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
       path: /
-      headers:
-        host: s1.956256.xyz
-  - &id042
-    name: 🇫🇷_FR_法国
-    type: trojan
-    server: 15.188.111.158
-    port: 22222
-    udp: true
-    password: telegram-id-privatevpns
-    sni: trojan.miwan.co.uk
+  - &id025
+    name: 🇺🇸_US_美国_16
+    type: vmess
+    server: cold-dawn-9246.fly.dev
+    port: 443
+    cipher: auto
+    uuid: ea4909ef-7ca6-4b46-bf2e-6c07896ef338
+    alterId: 0
+    tls: true
     skip-cert-verify: true
-    network: tcp
+    servername: cold-dawn-9246.fly.dev
+    network: ws
+    ws-opts:
+      path: /ea4909ef-7ca6-4b46-bf2e-6c07896ef338-vm
 proxy-groups:
   - name: PROXY
     type: select
@@ -647,23 +402,6 @@ proxy-groups:
       - *id023
       - *id024
       - *id025
-      - *id026
-      - *id027
-      - *id028
-      - *id029
-      - *id030
-      - *id031
-      - *id032
-      - *id033
-      - *id034
-      - *id035
-      - *id036
-      - *id037
-      - *id038
-      - *id039
-      - *id040
-      - *id041
-      - *id042
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -694,23 +432,6 @@ proxy-groups:
       - *id023
       - *id024
       - *id025
-      - *id026
-      - *id027
-      - *id028
-      - *id029
-      - *id030
-      - *id031
-      - *id032
-      - *id033
-      - *id034
-      - *id035
-      - *id036
-      - *id037
-      - *id038
-      - *id039
-      - *id040
-      - *id041
-      - *id042
   - name: SELECT
     type: select
     proxies:
@@ -739,23 +460,6 @@ proxy-groups:
       - *id023
       - *id024
       - *id025
-      - *id026
-      - *id027
-      - *id028
-      - *id029
-      - *id030
-      - *id031
-      - *id032
-      - *id033
-      - *id034
-      - *id035
-      - *id036
-      - *id037
-      - *id038
-      - *id039
-      - *id040
-      - *id041
-      - *id042
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
