--- a/pub/wefound.yaml
+++ b/pub/wefound.yaml
@@ -6,19 +6,63 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
-    name: 🇺🇸_US_美国_1
+    name: 🇺🇸_US_美国->🇷🇺_RU_俄罗斯联邦
     type: trojan
-    server: 104.160.18.251
+    server: 172.67.204.84
     port: 443
     udp: true
-    password: 7522e2c27233459aab8d0f1d715828d0
-    sni: www.gpt123.one
+    password: qj1Dz1CJmFQRhWr1SP80aA
+    sni: cdn-21.gsmxreality.com
     skip-cert-verify: true
-    network: tcp
+    network: grpc
+    grpc-opts:
+      grpc-service-name: 443trojan
   - &id002
+    name: 🇺🇸_US_美国->🇳🇱_NL_荷兰_1
+    type: trojan
+    server: 104.21.42.52
+    port: 2096
+    udp: true
+    password: RtOGIC4aSC
+    sni: ngo.topoppongroup.space
+    skip-cert-verify: true
+    network: grpc
+    grpc-opts:
+      grpc-service-name: '----------telegram:vpn_xw----------'
+  - &id003
+    name: 🇳🇱_NL_荷兰
+    type: vmess
+    server: 91.242.229.69
+    port: 2086
+    cipher: auto
+    uuid: 88c216b8-56c6-4f34-bcfd-e198ce11f7d6
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /vmess
+      headers:
+        host: nl1.xv2ray.net
+  - &id004
+    name: 🇺🇸_US_美国_1
+    type: vmess
+    server: 172.67.221.183
+    port: 8080
+    cipher: auto
+    uuid: 22826b44-5c1a-4b4b-dbaa-83a2e8bd95f0
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: www.blueberrywindow.online
+  - &id005
     name: 🇺🇸_US_美国_2
     type: vmess
-    server: 172.67.166.190
+    server: 104.21.89.252
     port: 8080
     cipher: auto
     uuid: 22826b44-5c1a-4b4b-dbaa-83a2e8bd95f0
@@ -30,38 +74,19 @@ proxies:
       path: /
       headers:
         host: www.crispyrainbow.online
-  - &id003
-    name: 🇺🇸_US_美国->🇳🇱_NL_荷兰
+  - &id006
+    name: 🇩🇪_DE_德国_1
     type: vmess
-    server: 172.67.185.208
-    port: 2095
+    server: 5.75.190.50
+    port: 3389
     cipher: auto
-    uuid: 3c1cca21-1373-4707-a575-195e9da0fb71
+    uuid: 9c050a86-d612-48f1-ec32-e573df08a1b7
     alterId: 0
     tls: false
     skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: ebiii.fozool76.lol
-  - &id004
+    network: http
+  - &id007
     name: 🇺🇸_US_美国_3
-    type: vmess
-    server: server32.beheshtbaneh.com
-    port: 8880
-    cipher: auto
-    uuid: 044ba8ed-7285-472a-bc14-fb91dc6be4c9
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: server32.beheshtbaneh.com
-  - &id005
-    name: 🇺🇸_US_美国_4
     type: vmess
     server: 104.21.23.176
     port: 8080
@@ -75,68 +100,8 @@ proxies:
       path: /
       headers:
         host: www.crispyrainbow.biz
-  - &id006
-    name: 🇺🇸_US_美国_5
-    type: vmess
-    server: server26.beheshtbaneh.com
-    port: 8880
-    cipher: auto
-    uuid: 5a7021e0-26b4-45d6-b175-fe551601ca97
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: server26.beheshtbaneh.com
-  - &id007
-    name: 🇺🇸_US_美国_6
-    type: vmess
-    server: server13.beheshtbaneh.com
-    port: 8880
-    cipher: auto
-    uuid: 0c0db4fe-6133-4837-9f57-0ce75fb59692
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: server13.beheshtbaneh.com
   - &id008
-    name: 🇺🇸_US_美国_7
-    type: vmess
-    server: www.speedtest.net
-    port: 80
-    cipher: auto
-    uuid: b2c3b2d3-c21c-4a33-b55c-db589d485487
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: worker-falling-leaf-df34.dtdacxjh.workers.dev
-  - &id009
-    name: 🇺🇸_US_美国_8
-    type: vmess
-    server: server20.beheshtbaneh.com
-    port: 8880
-    cipher: auto
-    uuid: 7ee41eb4-0594-4e2d-92a7-5dd3ee513692
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: server20.beheshtbaneh.com
-  - &id010
-    name: 🇺🇸_US_美国_9
+    name: 🇺🇸_US_美国_4
     type: vmess
     server: www.crispyrainbow.online
     port: 8080
@@ -150,128 +115,8 @@ proxies:
       path: /
       headers:
         host: www.crispyrainbow.online
-  - &id011
-    name: 🇺🇸_US_美国_10
-    type: vmess
-    server: server3.beheshtbaneh.com
-    port: 8880
-    cipher: auto
-    uuid: e305fc57-6153-4650-8c52-9a36865a199d
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: server3.beheshtbaneh.com
-  - &id012
-    name: 🇺🇸_US_美国_11
-    type: vmess
-    server: server4.beheshtbaneh.com
-    port: 8880
-    cipher: auto
-    uuid: b7e04f2a-2a6a-4b74-a11e-06f658c36391
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: server4.beheshtbaneh.com
-  - &id013
-    name: 🇺🇸_US_美国_12
-    type: vmess
-    server: www.blueberrywindow.online
-    port: 8080
-    cipher: auto
-    uuid: 22826b44-5c1a-4b4b-dbaa-83a2e8bd95f0
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: www.blueberrywindow.online
-  - &id014
-    name: 🇺🇸_US_美国_13
-    type: vmess
-    server: www.darkroom.lol
-    port: 8080
-    cipher: auto
-    uuid: 22826b44-5c1a-4b4b-dbaa-83a2e8bd95f0
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: www.darkroom.lol
-  - &id015
-    name: 🇺🇸_US_美国_14
-    type: vmess
-    server: 104.21.82.183
-    port: 8880
-    cipher: auto
-    uuid: c5626b16-4c57-4d7e-8668-6b1ecda5c8b5
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: server6.beheshtbaneh.com
-  - &id016
-    name: 🇺🇸_US_美国_15
-    type: vmess
-    server: www.crispyrainbow.biz
-    port: 8080
-    cipher: auto
-    uuid: 22826b44-5c1a-4b4b-dbaa-83a2e8bd95f0
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: www.crispyrainbow.biz
-  - &id017
-    name: 🇺🇸_US_美国_16
-    type: vmess
-    server: 104.21.94.99
-    port: 8080
-    cipher: auto
-    uuid: 22826b44-5c1a-4b4b-dbaa-83a2e8bd95f0
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: www.blueberrywindow.online
-  - &id018
-    name: 🇪🇸_ES_西班牙->🇭🇰_HK_香港
-    type: vmess
-    server: 185.214.103.249
-    port: 8002
-    cipher: auto
-    uuid: e096b14e-b746-3dda-bc95-a435b4b2aceb
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /db00
-      headers:
-        host: cache-hk-1.cn-db.top
-  - &id019
-    name: 🇺🇸_US_美国_17
+  - &id009
+    name: 🇺🇸_US_美国_5
     type: vmess
     server: 172.67.212.114
     port: 8080
@@ -285,28 +130,37 @@ proxies:
       path: /
       headers:
         host: www.crispyrainbow.biz
-  - &id020
-    name: 🇺🇸_US_美国_18
+  - &id010
+    name: 🇬🇧_GB_英国
     type: vmess
-    server: server9.beheshtbaneh.com
-    port: 8880
+    server: au-melbourne-oracle-abfdf2.ip1.shop
+    port: 63503
     cipher: auto
-    uuid: 62575747-37b4-4bf8-9ac5-95d214003be1
+    uuid: ed4d8827-4d5a-4c05-a577-c66d6a2fc1e6
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
       path: /
-      headers:
-        host: server9.beheshtbaneh.com
-  - &id021
-    name: 🇷🇺_RU_俄罗斯联邦
+  - &id011
+    name: 🇨🇳_CN_中国->🇮🇳_IN_印度
     type: vmess
-    server: 45.144.2.113
+    server: 183.232.170.22
+    port: 30128
+    cipher: auto
+    uuid: 9f41898b-e80d-418d-9ea8-5c51a914722a
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id012
+    name: 🇺🇸_US_美国_6
+    type: vmess
+    server: 172.67.217.144
     port: 80
     cipher: auto
-    uuid: 1cb996c8-e5bf-40d2-9a3c-149b3b721c5f
+    uuid: 85674552-ce41-44d9-bb2a-50f76450b3d8
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -314,14 +168,127 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: 45.144.2.113
-  - &id022
-    name: 🇺🇸_US_美国_19
+        host: lv1.xv2ray.net
+  - &id013
+    name: 🇺🇸_US_美国_7
     type: vmess
-    server: server5.beheshtbaneh.com
+    server: 104.21.31.244
+    port: 8080
+    cipher: auto
+    uuid: 22826b44-5c1a-4b4b-dbaa-83a2e8bd95f0
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: www.nahck.site
+  - &id014
+    name: 🇺🇸_US_美国_8
+    type: vmess
+    server: www.blueberrywindow.online
+    port: 8080
+    cipher: auto
+    uuid: 22826b44-5c1a-4b4b-dbaa-83a2e8bd95f0
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: www.blueberrywindow.online
+  - &id015
+    name: 🇺🇸_US_美国_9
+    type: vmess
+    server: 104.21.94.99
+    port: 8080
+    cipher: auto
+    uuid: 22826b44-5c1a-4b4b-dbaa-83a2e8bd95f0
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: www.blueberrywindow.online
+  - &id016
+    name: 🇺🇸_US_美国->🇳🇱_NL_荷兰_2
+    type: trojan
+    server: 172.67.157.8
+    port: 2096
+    udp: true
+    password: RtOGIC4aSC
+    sni: ngo.topoppongroup.space
+    skip-cert-verify: true
+    network: grpc
+    grpc-opts:
+      grpc-service-name: '----------telegram:vpn_xw----------'
+  - &id017
+    name: 🇺🇸_US_美国_10
+    type: vmess
+    server: www.crispyrainbow.biz
+    port: 8080
+    cipher: auto
+    uuid: 22826b44-5c1a-4b4b-dbaa-83a2e8bd95f0
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: www.crispyrainbow.biz
+  - &id018
+    name: 🇺🇸_US_美国_11
+    type: vmess
+    server: 172.67.180.248
+    port: 8080
+    cipher: auto
+    uuid: 22826b44-5c1a-4b4b-dbaa-83a2e8bd95f0
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: www.nahck.site
+  - &id019
+    name: 🇺🇸_US_美国_12
+    type: vmess
+    server: www.nahck.site
+    port: 8080
+    cipher: auto
+    uuid: 22826b44-5c1a-4b4b-dbaa-83a2e8bd95f0
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: www.nahck.site
+  - &id020
+    name: 🇩🇪_DE_德国_2
+    type: vmess
+    server: 116.203.116.244
+    port: 3389
+    cipher: auto
+    uuid: 9c050a86-d612-48f1-ec32-e573df08a1b7
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: http
+  - &id021
+    name: 🇺🇸_US_美国_13
+    type: vmess
+    server: 104.21.82.183
     port: 8880
     cipher: auto
-    uuid: 352ecc6f-21f1-4dc8-8177-4ebd52c55b12
+    uuid: 5a7021e0-26b4-45d6-b175-fe551601ca97
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -329,22 +296,7 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: server5.beheshtbaneh.com
-  - &id023
-    name: 🇺🇸_US_美国->🇷🇺_RU_俄罗斯联邦
-    type: vmess
-    server: 104.18.202.232
-    port: 2083
-    cipher: auto
-    uuid: 0d3f0cf6-e010-4138-8133-140c07e5eafb
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /@golestan_vpn
-      headers:
-        host: joooin.golestan-vpn.link
+        host: server26.beheshtbaneh.com
 proxy-groups:
   - name: PROXY
     type: select
@@ -392,8 +344,6 @@ proxy-groups:
       - *id019
       - *id020
       - *id021
-      - *id022
-      - *id023
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -420,8 +370,6 @@ proxy-groups:
       - *id019
       - *id020
       - *id021
-      - *id022
-      - *id023
   - name: SELECT
     type: select
     proxies:
@@ -446,8 +394,6 @@ proxy-groups:
       - *id019
       - *id020
       - *id021
-      - *id022
-      - *id023
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
